--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <title>Online Bling</title>
+    <title>Influencial Marketing</title>
 
   	<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Noto+Sans|Quicksand" rel="stylesheet">
